# Nuit

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
engine/: math.cppm  nuit.cppm  shapes.cpp  shapes.cppm  utils.cpp  utils.cppm
engine/core/: file.cpp  file.cppm  image.cppm  timer.cpp  timer.cppm
engine/main/: app.cppm  layer.cppm
engine/math/: math.cppm
engine/platform/: input_event.cppm  input_manager.cpp  input_manager.cppm  input_map.cppm  window.cpp  window.cppm
engine/platform/imgui/: imgui.cppm
engine/rendering/: gl_framebuffer.cpp  gl_framebuffer.cppm  gl_renderer.cpp  gl_renderer.cppm  gl_shader.cpp  gl_shader.cppm  gl_texture.cpp  gl_texture.cppm  mesh.cpp  mesh.cppm
engine/scene/: camera_3d.cpp  camera_3d.cppm  node_3d.cpp  node_3d.cppm  object.cppm  ray_2d.cpp  ray_2d.cppm
engine/scene/shapes/: circle.cpp  circle.cppm  grid.cpp  grid.cppm  shapes.cpp  shapes.cppm  sphere.cppm
extensions/: CMakeLists.txt
extensions/imgui/: CMakeLists.txt
extensions/imgui/src/: imgui.cppm
sandbox/: CMakeLists.txt
sandbox/editor/: CMakeLists.txt
sandbox/editor/shaders/: basic_vert.vert
sandbox/editor/src/: editor.cppm  main.cpp
sandbox/matrix-stack/: CMakeLists.txt
sandbox/matrix-stack/shaders/: basic_frag.frag  basic_vert.vert
sandbox/matrix-stack/src/: main.cpp
sandbox/meshes/: CMakeLists.txt
sandbox/meshes/assets/: banjo_frog.mtl
sandbox/meshes/assets/low_poly_tree/: Lowpoly_tree_sample.mtl
sandbox/meshes/shaders/: basic_frag.frag  basic_tex.frag  basic_tex.vert  basic_vert.vert
sandbox/meshes/src/: camera.cppm  main.cpp
sandbox/raycaster/: CMakeLists.txt
sandbox/raycaster/data/: map
sandbox/raycaster/shaders/: fragmentShader.frag  vertexShader.vert
sandbox/raycaster/shaders/2d/: fragment.frag  vertex.vert
sandbox/raycaster/shaders/3d/: vertex.vert
sandbox/raycaster/src/: main.cpp  map.cpp  map.cppm  player.cpp  player.cppm  ray_2d.cpp  ray_2d.cppm  shader.cppm  shapes.cppm
sandbox/shapes/: CMakeLists.txt
sandbox/shapes/shaders/: basic_frag.frag
sandbox/shapes/src/: main.cpp
